Bug 212592 - [GTK4] Fix pointer lock in X11
Summary: [GTK4] Fix pointer lock in X11
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: Gtk
Depends on:
Blocks: GTK4 212593
  Show dependency treegraph
 
Reported: 2020-06-01 04:53 PDT by Carlos Garcia Campos
Modified: 2020-06-01 05:27 PDT (History)
5 users (show)

See Also:


Attachments
Patch (3.02 KB, patch)
2020-06-01 04:57 PDT, Carlos Garcia Campos
aperez: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Carlos Garcia Campos 2020-06-01 04:53:28 PDT
I forgot to forward the motion events for X11 in gtk4.
Comment 1 Carlos Garcia Campos 2020-06-01 04:57:25 PDT
Created attachment 400729 [details]
Patch
Comment 2 EWS Watchlist 2020-06-01 04:57:58 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Comment 3 Carlos Garcia Campos 2020-06-01 05:27:48 PDT
Committed r262372: <https://trac.webkit.org/changeset/262372>