[GTK4] Fix pointer lock in X11 https://bugs.webkit.org/show_bug.cgi?id=212592

Reviewed by Adrian Perez de Castro.

I forgot to forward the motion events for X11 in GTK4.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(MotionEvent::MotionEvent): Add a constructor that receives the positions and state.
(webkitWebViewBaseMotion): Notify the pointer lock manager about the event. Also save the last motion event and
compute the movement delta.

Canonical link: https://commits.webkit.org/225420@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262372 268f45cc-cd09-0410-ab3c-d52691b4dbfc